Fix issue with scrolling of settings-app on Firefox

--- a/src/css/settings-app/main.scss
+++ b/src/css/settings-app/main.scss
@@ -8,6 +8,7 @@
         justify-content: flex-start;
 
         height: 100%;
+        max-height: 100%;
         width: 100%;
 
         nav.settings-app-nav,
@@ -44,7 +45,7 @@
             flex: 1;
             padding-left: 8px;
             border-left: 1px solid #999;
-            overflow-y: scroll;
+            overflow-y: scroll !important;
             height: 100%;
 
             div.tab.active {
